--- a/package.json
+++ b/package.json
@@ -9,6 +9,12 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@lottiefiles/dotlottie-react": "^0.17.12",
+    "@supabase/supabase-js": "^2.90.1",
+    "date-fns": "^4.1.0",
+    "firebase": "^12.8.0",
+    "lottie-react": "^2.4.1",
+    "lucide-react": "^0.562.0",
     "next": "16.0.10",
     "react": "19.2.1",
     "react-dom": "19.2.1"
