--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,8 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+firestore.rules
+back-end-sample.txt
 
 # vercel
 .vercel
